--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,11 +2,12 @@
 
 // couleurs principales
 $primary-color: #414c16;
-$secondary-color: #98ac3b;
+$secondary-color: #326f30;
+$tertiary-color: #f0f5e6;
 
 // couleurs neutres
 $text-color: #2c3e50;
-$heading-color: #222;
+$background-color: #f5f5f5;
 $light-color: #fff;
 $grey-color: #6a8c69;
 $dark-color: #12002b;
