--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,12 +3,13 @@
 // couleurs principales
 $primary-color: #414c16;
 $secondary-color: #326f30;
-$tertiary-color: #f0f5e6;
+$tertiary-color: #eef3ed;
 
 // couleurs neutres
-$text-color: #2c3e50;
-$background-color: #f5f5f5;
+$text-color: #1d361e;
+$background-color: #fafafa;
 $light-color: #fff;
+$clear-color: #85a15b;
 $grey-color: #6a8c69;
 $dark-color: #12002b;
 
