--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -2,43 +2,45 @@
 
 .main-nav {
   background-color: white;
+  border-bottom: solid rgb(227, 227, 227) 1px;
 
   &__container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
+    max-width: 1240px;
+    padding: 0.5rem 2rem;
+    margin: 0 auto;
+    height: 4rem;
   }
 
   &__logo {
     text-decoration: none;
     display: flex;
     align-items: center;
-    gap: 10px;
-    margin-left: 0.6rem;
+    gap: 1rem;
   }
 
   &__image {
     max-width: 100%;
-    width: 40px;
+    width: 3.2rem;
   }
 
   &__text {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    color: $primary-color;
+    color: $text-color;
   }
 
   &__title {
     text-decoration: none;
-    font-size: 20px;
+    font-size: 1.7rem;
     font-weight: 600;
   }
 
   &__subtitle {
     text-decoration: none;
-    font-size: 12px;
     color: $grey-color;
   }
 
@@ -50,34 +52,28 @@
   &__link {
     display: flex;
     align-items: center;
-    gap: 0.6rem;
+    gap: 0.5em;
     text-decoration: none;
     font-weight: 600;
     color: $grey-color;
 
-    padding: 0.6rem 1rem;
-    border-radius: 12px;
+    padding: 0.7rem 1.1rem;
+    border-radius: 0.9rem;
     transition: all 250ms ease;
 
     &:hover {
       color: $secondary-color;
-      background-color: rgb(238, 243, 237);
+      background-color: $tertiary-color;
     }
 
     &.active {
       color: $secondary-color;
-      background-color: rgb(238, 243, 237);
+      background-color: $tertiary-color;
     }
   }
 
-  &__item {
-    font-weight: bold;
-    margin-right: 0.8rem;
-    text-decoration: none;
-    color: $text-color;
-
-    &:hover {
-      text-decoration: underline;
-    }
+  &__icon {
+    width: 1.2rem;
+    height: 1.2rem;
   }
 }
