--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -25,3 +25,9 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+abbr {
+  text-decoration: none !important;
+  border-bottom: none !important;
+  cursor: default !important;
+}
