Select fields and modal done

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,9 @@
 // components
 @use '../components/header/header';
 
+// ui
+@use '../components/ui/uiModal';
+
 // pages
 @use '../pages/employeeCreate/employeeCreate';
 
