--- a/src/pages/employeeCreate/_employeeCreate.scss
+++ b/src/pages/employeeCreate/_employeeCreate.scss
@@ -72,6 +72,17 @@
       border: 2px solid #ff4f4f;
     }
 
+    &::placeholder {
+      color: $grey-color;
+      opacity: 1;
+    }
+
+    &::-webkit-input-placeholder,
+    &:-ms-input-placeholder,
+    &::-ms-input-placeholder {
+      color: $grey-color;
+    }
+
     &:-webkit-autofill,
     &:-webkit-autofill:hover,
     &:-webkit-autofill:focus,
@@ -147,4 +158,14 @@
   background-color: $clear-color !important;
   color: white !important;
   border-radius: 1rem;
+}
+
+select.form__input {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+
+  &:has(option[value='']:checked) {
+    color: $grey-color;
+  }
 }
