--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 
 // pages
 @use '../pages/employeeCreate/employeeCreate';
+@use '../pages/employeeList/employeeList';
 
 html {
   font-family: $font-family;
@@ -25,8 +26,13 @@ body {
 
 #root {
   min-height: 100vh;
+}
+
+.container {
   display: flex;
   flex-direction: column;
+  gap: 2.5rem;
+  margin: 2rem auto;
 }
 
 abbr {
