--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 // pages
 @use '../pages/employeeCreate/employeeCreate';
 @use '../pages/employeeList/employeeList';
+@use '../pages/notFound/notFound';
 
 html {
   font-family: $font-family;
