--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 // ui
 @use '../components/ui/modal/uiModal';
 @use '../components/ui/datepicker/datepicker';
+@use '../components/ui/search/employeeSearchBar';
 
 // pages
 @use '../pages/employeeCreate/employeeCreate';
