--- a/src/components/header/_header.scss
+++ b/src/components/header/_header.scss
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 2rem;
     max-width: 1240px;
     padding: 0.5rem 2rem;
     margin: 0 auto;
@@ -31,6 +32,10 @@
     flex-direction: column;
     align-items: flex-start;
     color: $text-color;
+
+    @media (max-width: 599px) {
+      display: none;
+    }
   }
 
   &__title {
