--- a/src/pages/employeeList/_employeeList.scss
+++ b/src/pages/employeeList/_employeeList.scss
@@ -6,6 +6,13 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: end;
+
+    @media (max-width: 599px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+    }
   }
 
   &__title {
@@ -15,6 +22,10 @@
     gap: 0.5rem;
     h1 {
       margin: 0;
+    }
+
+    @media (max-width: 599px) {
+      align-items: center;
     }
 
     &__subtext {
