--- a/src/components/ui/modal/_uiModal.scss
+++ b/src/components/ui/modal/_uiModal.scss
@@ -8,6 +8,10 @@
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05);
   text-align: center;
 
+  @media (max-width: 599px) {
+    width: 22rem;
+  }
+
   &-overlay {
     position: fixed;
     inset: 0;
