--- a/src/pages/employeeList/_employeeList.scss
+++ b/src/pages/employeeList/_employeeList.scss
@@ -39,7 +39,7 @@
     justify-content: space-between;
     align-items: flex-start;
     max-width: 1240px;
-    padding: 0.5rem 2rem;
+    padding: 0rem 2rem 0.5rem;
     margin: 0 auto;
   }
 
