--- a/src/components/ui/datepicker/_datepicker.scss
+++ b/src/components/ui/datepicker/_datepicker.scss
@@ -1,39 +1,50 @@
 @use '../../../styles/variables' as *;
 
-.pika-single {
+.react-datepicker {
+  width: 17rem;
   border: 1px solid #e8e8e8;
   border-radius: 1rem;
+  overflow: hidden;
   background-color: $light-color;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.05) !important;
-}
 
-.pika {
-  &-single {
-    transform: translateX(0.5rem);
+  &__triangle {
+    display: none !important;
   }
 
-  &-day {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: white;
+  &__month-container {
+    width: 100%;
+  }
+
+  &__day,
+  &__day-name {
+    width: 2rem;
+    line-height: 1.5rem;
+    font-size: 0.85rem;
+  }
+
+  &__day {
+    &-name {
+      font-weight: 500;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
+    }
+
+    &--today {
+      color: $grey-color;
+    }
+
+    &--selected,
+    &--keyboard-selected {
+      background-color: $clear-color !important;
+      color: white !important;
+      border-radius: 1rem !important;
+    }
 
     &:hover {
-      color: black;
-      background-color: $tertiary-color;
-      border-radius: 1rem;
+      color: black !important;
+      background-color: $tertiary-color !important;
+      border-radius: 1rem !important;
     }
   }
-
-  &-weekdays {
-    text-decoration: none !important;
-    border-bottom: none !important;
-    cursor: default !important;
-  }
-}
-
-.is-selected .pika-day {
-  background-color: $clear-color !important;
-  color: white !important;
-  border-radius: 1rem;
 }
