--- a/src/pages/employeeCreate/_employeeCreate.scss
+++ b/src/pages/employeeCreate/_employeeCreate.scss
@@ -171,3 +171,13 @@ select.form__input {
     color: $grey-color;
   }
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+select:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px #fff inset !important;
+  box-shadow: 0 0 0 1000px $background-color inset !important;
+  -webkit-text-fill-color: $text-color !important;
+}
